--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -2,7 +2,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/jeeshop
 jdbc.username=root
-jdbc.password=root
+jdbc.password=sysadmin
 jdbc.pool.minPoolSize=5
 jdbc.pool.maxPoolSize=30
 jdbc.pool.initialPoolSize=5
