险别信息列表 List<NvhlCvrgVO>添加，订单页面增加显示字段

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -17,6 +17,10 @@ task_SystemAutoNotifyTask_time = 3600
 task_ManageCacheTask_time = 3600
 task_CancelOrderTask_time = 3600
 
+####url 1000 \1003  1001####
+interfaceUrl=http://60.212.43.251:6001/telnetscs/services/totalInterfaceParseNode?wsdl
+####payUrl1002####
+payUrl=http://60.212.43.251:6003/onlinepay/recvMerchantAction.do?orderId=
 
 file.upload.path=resource/product_imgs/
 paygate.type=dummy
