硬代码去除

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -16,8 +16,50 @@ system_debug=debug
 task_SystemAutoNotifyTask_time = 3600
 task_ManageCacheTask_time = 3600
 task_CancelOrderTask_time = 3600
-
-####url 1000 \1003  1001####
+##telOperVO
+cpasswd1000=JDT123456
+coperid1000=userJDT
+###1000 
+cdptcde=1001150001
+cdptcnm=\u521B\u65B0\u4E8B\u4E1A\u90E8\u7EFC\u5408\u4E1A\u52A1\u90E8
+tradtype1000=bNN003
+appnoflag=3
+##1001
+datasource=45
+paytype=2
+payway=5
+backurl=http://123.207.254.113:8080/JDT/manage/NvhlBase/selectOrderList?payReturnFlag=true
+subcompany=1001
+currencytype=CNY
+departmentcode=1001150001
+tradtype1001=bNN004
+###1003
+cpasswd1003=huahaiweixin_pwd
+coperid1003=huahaiweixin
+tradtype1003=bNN001
+occupcde=2
+cdisptsttlcd=B
+cneedfeeflag=1
+sysres=JDT
+CBsnsTyp=19002
+CChaType=1900201
+CChaSubtype=19002001
+COprCde=03000001
+CSlsId=101001000054
+CSlsNme=\u66FE\u6DD1\u534E
+CBrkrCde=10000000465
+CAgtAgrNo=10000000465_1
+AgriMak=2
+CWaterMark=0
+FinTyp=5
+CCiMrk=0
+CGrpMrk=0
+EfcManualFlag=Y
+CPlyTyp=1
+CHealthMrk=1
+NTransactionNo=hh_0100101000121000320160000529
+NTms=1
+####url 1000 1003  1001####
 interfaceUrl=http://60.212.43.251:6001/telnetscs/services/totalInterfaceParseNode?wsdl
 ####payUrl1002####
 payUrl=http://60.212.43.251:6003/onlinepay/recvMerchantAction.do?orderId=
