backUrl返回问题修改

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -28,7 +28,7 @@ appnoflag=3
 datasource=45
 paytype=2
 payway=5
-backurl=http://123.207.254.113:8080/JDT/manage/NvhlBase/selectOrderList?payReturnFlag=true
+backurl=http://123.207.254.113:8080/JDT/manage/NvhlBase/selectOrderList?cid=
 subcompany=1001
 currencytype=CNY
 departmentcode=1001150001
