人工核保代码

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -54,7 +54,7 @@ CWaterMark=0
 FinTyp=5
 CCiMrk=0
 CGrpMrk=0
-EfcManualFlag=Y
+EfcManualFlag=0
 CPlyTyp=1
 CHealthMrk=1
 NTransactionNo=hh_0100101000121000320160000529
