--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -34,8 +34,8 @@ currencytype=CNY
 departmentcode=1001150001
 tradtype1001=bNN004
 ###1003
-cpasswd1003=huahaiweixin_pwd
-coperid1003=huahaiweixin
+coperid1003=userJDT
+cpasswd1003=JDT123456
 tradtype1003=bNN001
 occupcde=2
 cdisptsttlcd=B
@@ -43,17 +43,19 @@ cneedfeeflag=1
 sysres=JDT
 CBsnsTyp=19002
 CChaType=1900201
-CChaSubtype=19002001
+CChaSubtype=1900201001
 COprCde=03000001
 CSlsId=101001000054
 CSlsNme=\u66FE\u6DD1\u534E
 CBrkrCde=10000000465
 CAgtAgrNo=10000000465_1
+CUnfixSpc=\u4FDD\u9669\u6807\u7684\u7684\u4FDD\u9669\u4EF7\u503C\u4E3A\u51FA\u9669\u65F6\u7684\u5E02\u573A\u4EF7\u503C
 AgriMak=2
 CWaterMark=0
 FinTyp=5
 CCiMrk=0
 CGrpMrk=0
+##zhuan ren gong
 EfcManualFlag=0
 CPlyTyp=1
 CHealthMrk=1
