--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,15 +8,19 @@
     <context-param>
         <param-name>webAppRootKey</param-name>
         <param-value>jeeshop.root</param-value>
+        
+         <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/beans.xml,WEB-INF/cxf.xml</param-value>        
+        
     </context-param>
-
+   <!--   <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:spring/applicationContext.xml</param-value>
+    </context-param>-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring/applicationContext.xml</param-value>
-    </context-param>
+
     <servlet>
         <description>spring mvc servlet</description>
         <servlet-name>springMvc</servlet-name>
@@ -155,12 +159,12 @@
 	<servlet>
 		<servlet-name>CXFServlet</servlet-name>
 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/webservice/*</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
