--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -49,7 +49,14 @@ CSlsId=101001000054
 CSlsNme=\u66FE\u6DD1\u534E
 CBrkrCde=10000000465
 CAgtAgrNo=10000000465_1
-CUnfixSpc=\u4FDD\u9669\u6807\u7684\u7684\u4FDD\u9669\u4EF7\u503C\u4E3A\u51FA\u9669\u65F6\u7684\u5E02\u573A\u4EF7\u503C
+##mian pei e
+NDductAmt=1000
+##mian pei lv
+NDductRate=10
+##caichanxian
+CUnfixSpc1=\u4FDD\u9669\u6807\u7684\u7684\u4FDD\u9669\u4EF7\u503C\u4E3A\u51FA\u9669\u65F6\u7684\u5E02\u573A\u4EF7\u503C
+##gongzexian
+CUnfixSpc2= 1\u3001\u672C\u4FDD\u9669\u8BA1\u5212\u4E0D\u627F\u4FDD\u4EFB\u4F55\u7531\u88AB\u4FDD\u9669\u4EBA\u4FDD\u7BA1\u4E4B\u7B2C\u4E09\u8005\u8D22\u4EA7\u7684\u88AB\u76D7/\u62A2\u52AB\u6216\u56E0\u4E13\u4E1A\u517B\u62A4\u3001\u7EF4\u4FEE\u3001\u6D17\u6DA4\u7B49\u9020\u6210\u7684\u635F\u5931\uFF0C\u6211\u53F8\u5BF9\u4E8E\u7531\u6B64\u4EA7\u751F\u7684\u635F\u5931\u4E0D\u8D1F\u4EFB\u4F55\u4E4B\u8D54\u507F\u8D23\u4EFB\uFF1B2\u3001\u7ECF\u53CC\u65B9\u540C\u610F\uFF0C\u4FDD\u9669\u671F\u9650\u5185\u7531\u4E8E\u53D1\u751F\u706B\u707E\u3001\u7206\u70B8\u5BFC\u81F4\u7684\u4E09\u8005\u635F\u5931\u65F6\uFF0C\u672C\u4FDD\u5355\u4FDD\u9669\u9650\u989D\u81EA\u52A8\u6062\u590D\u4E3A40\u4E07\u5143\u30023\u3001\u6BCF\u6B21\u4E8B\u6545\u6240\u9020\u6210\u7684\u533B\u7597\u8D39\u7528\u7EDD\u5BF9\u514D\u8D54\u4E3A\u4EBA\u6C11\u5E01200\u5143\uFF0C100%\u62A5\u9500\u3002
 AgriMak=2
 CWaterMark=0
 FinTyp=5
