--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -49,6 +49,8 @@ CSlsId=101001000054
 CSlsNme=\u66FE\u6DD1\u534E
 CBrkrCde=10000000465
 CAgtAgrNo=10000000465_1
+##mian ze shuo ming
+CDductDesc=\u9664\u53E6\u6709\u7EA6\u5B9A\u5916\uFF0C\u672C\u4FDD\u9669\u5408\u540C\u7684\u6BCF\u6B21\u4E8B\u6545\u7EDD\u5BF9\u514D\u8D54\u989D\u4E3A\u4EBA\u6C11\u5E011000\u5143\u6216\u635F\u5931\u91D1\u989D\u768410%\uFF0C\u4E24\u8005\u4EE5\u9AD8\u8005\u4E3A\u51C6\u3002
 ##mian pei e
 NDductAmt=1000
 ##mian pei lv
