--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 ##jdbc配置##
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeeshop
+jdbc.url=jdbc:mysql://localhost:3306/jshop
 jdbc.username=root
 jdbc.password=123456
 jdbc.pool.minPoolSize=5
