--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -77,3 +77,13 @@ payUrl=http://60.212.43.251:6003/onlinepay/recvMerchantAction.do?orderId=
 
 file.upload.path=resource/product_imgs/
 paygate.type=dummy
+
+
+##shi fou xu bao biao zhi
+RenewMrk=597001
+##ka zhe lei xing 
+CardSheTyp=1000
+##ka zhe hao ma
+CardSheNo=10
+## bei zhu
+Remark=\u9664\u53E6\u6709\u7EA6\u5B9A\u5916\uFF0C\u672C\u4FDD\u9669\u5408\u540C\u7684\u6BCF\u6B21\u4E8B\u6545\u7EDD\u5BF9\u514D\u8D54\u989D\u4E3A\u4EBA\u6C11\u5E011000\u5143\u6216\u635F\u5931\u91D1\u989D\u768410%\uFF0C\u4E24\u8005\u4EE5\u9AD8\u8005\u4E3A\u51C6\u3002
