--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -87,3 +87,8 @@ CardSheTyp=1000
 CardSheNo=10
 ## bei zhu
 Remark=\u9664\u53E6\u6709\u7EA6\u5B9A\u5916\uFF0C\u672C\u4FDD\u9669\u5408\u540C\u7684\u6BCF\u6B21\u4E8B\u6545\u7EDD\u5BF9\u514D\u8D54\u989D\u4E3A\u4EBA\u6C11\u5E011000\u5143\u6216\u635F\u5931\u91D1\u989D\u768410%\uFF0C\u4E24\u8005\u4EE5\u9AD8\u8005\u4E3A\u51C6\u3002
+
+##ying ye xingzhi mo ren pcode
+Ypcode=SQ000
+## hang ye lei xing qing dan pcode
+Hpcode=SQ201
