--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,8 @@
     <context-param>
         <param-name>webAppRootKey</param-name>
         <param-value>jeeshop.root</param-value>
-        
-         <param-name>contextConfigLocation</param-name>
+        <param-name>contextConfigLocation</param-name>
         <param-value>WEB-INF/beans.xml,WEB-INF/cxf.xml</param-value>        
-        
     </context-param>
    <!--   <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -164,7 +162,7 @@
 
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/webservice/*</url-pattern>
+		<url-pattern>/services/*</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
