修改保单形式的value

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -66,7 +66,8 @@ CCiMrk=0
 CGrpMrk=0
 ##zhuan ren gong
 EfcManualFlag=0
-CPlyTyp=1
+##保单形式
+CPlyTyp=0
 CHealthMrk=1
 NTransactionNo=hh_0100101000121000320160000529
 NTms=1
