--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,7 +71,7 @@
 	
 	<servlet>
 		<servlet-name>SecureProductServlet</servlet-name>
-		<servlet-class>net.jeeshop.web.action.manage.NvhlBase.SecureProductServlet</servlet-class>
+		<servlet-class>net.jeeshop.web.action.manage.secureProduct.SecureProductServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SecureProductServlet</servlet-name>
@@ -168,21 +168,12 @@
 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
-	<servlet>
-		<description>
-		</description>
-		<display-name>SecureProductServlet</display-name>
-		<servlet-name>SecureProductServlet</servlet-name>
-		<servlet-class>net.jeeshop.web.action.manage.NvhlBase.SecureProductServlet</servlet-class>
-	</servlet>
+	
 
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/services/*</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>SecureProductServlet</servlet-name>
-		<url-pattern>/SecureProductServlet</url-pattern>
-	</servlet-mapping>
+	
 	
 </web-app>
