--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = info,stdout,rollfile
+log4j.rootLogger = info,stdout,rollfile,database
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
@@ -11,3 +11,19 @@ log4j.appender.rollfile.MaxFileSize=2MB
 log4j.appender.rollfile.MaxBackupIndex=10  
 log4j.appender.rollfile.layout=org.apache.log4j.PatternLayout  
 log4j.appender.rollfile.layout.ConversionPattern=%d{yyyyMMdd HH:mm:ss}  %m%n
+
+### 将日志信息写入到数据库中###
+log4j.appender.database=org.apache.log4j.ConsoleAppender
+log4j.appender.layout=org.apache.log4j.PatternLayout
+log4j.appender.layout.VonversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS}[%p]: %m%n
+
+log4j.appender.database=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.database.driver=com.mysql.jdbc.Driver
+log4j.appender.database.URL=jdbc:mysql://localhost:3306/jeeshop?useUnicode=true&characterEncoding=UTF8
+log4j.appender.database.user=root
+log4j.appender.database.password=123456
+log4j.appender.database.Threshold=ERROR
+log4j.appender.database.docommit=Y
+log4j.appender.database.BufferSize=1
+log4j.appender.database.sql=insert into logs (createTime,cappNo,interfaceType,inPutParameter,outPutParameter,resultCode,resultInfo)VALUES('%d{yyyy-MM-dd hh:mm:ss}','%X{cappNo}','%X{interfaceType}','%X{inPutParameter}','%X{outPutParameter}','%X{resultCode}','%X{resultInfo}')
+log4j.appender.database.layout=org.apache.log4j.PatternLayout
