--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,11 +19,11 @@ log4j.appender.layout.VonversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS}[%p]: %m%n
 
 log4j.appender.database=org.apache.log4j.jdbc.JDBCAppender
 log4j.appender.database.driver=com.mysql.jdbc.Driver
-log4j.appender.database.URL=jdbc:mysql://localhost:3306/jeeshop?useUnicode=true&characterEncoding=UTF8
+log4j.appender.database.URL=jdbc:mysql://localhost:3306/jshop?useUnicode=true&characterEncoding=UTF8
 log4j.appender.database.user=root
 log4j.appender.database.password=123456
 log4j.appender.database.Threshold=ERROR
 log4j.appender.database.docommit=Y
 log4j.appender.database.BufferSize=1
-log4j.appender.database.sql=insert into logs (createTime,cappNo,interfaceType,inPutParameter,outPutParameter,resultCode,resultInfo)VALUES('%d{yyyy-MM-dd hh:mm:ss}','%X{cappNo}','%X{interfaceType}','%X{inPutParameter}','%X{outPutParameter}','%X{resultCode}','%X{resultInfo}')
+log4j.appender.database.sql=insert into logs (createTime,cappNo,policyNo,interfaceType,inPutParameter,outPutParameter,resultCode,resultInfo)VALUES('%d{yyyy-MM-dd hh:mm:ss}','%X{cappNo}','%X{policyNo}','%X{interfaceType}','%X{inPutParameter}','%X{outPutParameter}','%X{resultCode}','%X{resultInfo}')
 log4j.appender.database.layout=org.apache.log4j.PatternLayout
