修改log4j配置文件中数据库名称

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.layout.VonversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS}[%p]: %m%n
 
 log4j.appender.database=org.apache.log4j.jdbc.JDBCAppender
 log4j.appender.database.driver=com.mysql.jdbc.Driver
-log4j.appender.database.URL=jdbc:mysql://localhost:3306/jshop?useUnicode=true&characterEncoding=UTF8
+log4j.appender.database.URL=jdbc:mysql://localhost:3306/jeeshop?useUnicode=true&characterEncoding=UTF8
 log4j.appender.database.user=root
 log4j.appender.database.password=123456
 log4j.appender.database.Threshold=ERROR
